--- a/react-tetris/src/index.css
+++ b/react-tetris/src/index.css
@@ -4,5 +4,5 @@ body {
 
 @font-face {
   font-family: 'Pixel';
-  src: url('fonts/Pixel-LCD-7.woff') format('woff');
+  src: url('font/Pixel-LCD-7.woff') format('woff');
 }
